--- a/utils/flakiness-dashboard/package.json
+++ b/utils/flakiness-dashboard/package.json
@@ -2,11 +2,9 @@
   "name": "flakiness-dashboard",
   "version": "",
   "description": "",
-  "scripts": {
-    "test": "echo \"No tests yet...\""
-  },
   "author": "",
   "dependencies": {
-    "@azure/storage-blob": "^12.16.0"
+    "@azure/identity": "^4.1.0",
+    "@azure/storage-blob": "^12.17.0"
   }
 }
