feat: add the `page.touchscreen.swipe` method
https://chromedevtools.github.io/devtools-protocol/tot/Input/#method-dispatchTouchEvent

Implement it for chromium only since it could  using dispatchTouchEvent to invoke scroll.

Tried firefox but it doesn't work.

Close #2903

--- a/packages/protocol/src/protocol.yml
+++ b/packages/protocol/src/protocol.yml
@@ -1549,6 +1549,18 @@ Page:
         slowMo: true
         snapshot: true
 
+    touchscreenSwipe:
+      parameters:
+        x: number
+        y: number
+        xDistance: number
+        yDistance: number
+        speed: number?
+        steps: number?
+      flags:
+        slowMo: true
+        snapshot: true
+
     accessibilitySnapshot:
       parameters:
         interestingOnly: boolean?
