--- a/.github/actions/run-test/action.yml
+++ b/.github/actions/run-test/action.yml
@@ -34,7 +34,7 @@ runs:
   steps:
     - uses: actions/setup-node@v4
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: ${{ inputs.node-version }}
     # https://github.com/actions/runner-images/issues/9330
     - name: Allow microphone access to all apps (macOS 14)
       shell: bash
@@ -44,14 +44,14 @@ runs:
           sqlite3 $HOME/Library/Application\ Support/com.apple.TCC/TCC.db "INSERT OR IGNORE INTO access VALUES ('kTCCServiceMicrophone','/usr/local/opt/runner/provisioner/provisioner',1,2,4,1,NULL,NULL,0,'UNUSED',NULL,0,1687786159,NULL,NULL,'UNUSED',1687786159);"
         fi
     - run: npm ci
-      shell: ${{ inputs.shell }}
+      shell: bash
       env:
         DEBUG: pw:install
         PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: '1'
     - run: npm run build
-      shell: ${{ inputs.shell }}
+      shell: bash
     - run: npx playwright install --with-deps ${{ inputs.browsers-to-install }}
-      shell: ${{ inputs.shell }}
+      shell: bash
     - name: Run tests
       if: inputs.shell == 'bash'
       run: |
