--- a/packages/protocol/src/protocol.yml
+++ b/packages/protocol/src/protocol.yml
@@ -35,6 +35,8 @@ Metadata:
     internal: boolean?
     # The number of milliseconds elapsed since midnight, January 1, 1970 UTC.
     wallTime: number?
+    # Test runner step id.
+    stepId: string?
 
 ClientSideCallMetadata:
   type: object
