--- a/.github/workflows/tests_primary.yml
+++ b/.github/workflows/tests_primary.yml
@@ -41,6 +41,9 @@ jobs:
           - os: ubuntu-22.04
             node-version: 20
             browser: chromium
+          - os: ubuntu-22.04
+            node-version: 22
+            browser: chromium
     runs-on: ${{ matrix.os }}
     permissions:
       id-token: write   # This is required for OIDC login (azure/login) to succeed
@@ -106,6 +109,14 @@ jobs:
             shardTotal: 2
           - os: ubuntu-latest
             node-version: 20
+            shardIndex: 2
+            shardTotal: 2
+          - os: ubuntu-latest
+            node-version: 22
+            shardIndex: 1
+            shardTotal: 2
+          - os: ubuntu-latest
+            node-version: 22
             shardIndex: 2
             shardTotal: 2
     runs-on: ${{ matrix.os }}
