--- a/.github/workflows/tests_secondary.yml
+++ b/.github/workflows/tests_secondary.yml
@@ -95,7 +95,7 @@ jobs:
           node_version: 16
         - os: ubuntu-latest
           node_version: 20
-        - os: ubuntu-latno est
+        - os: ubuntu-latest
           node_version: 22
     timeout-minutes: 30
     steps:
