--- a/.github/workflows/tests_others.yml
+++ b/.github/workflows/tests_others.yml
@@ -24,7 +24,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        # Stick with macos-latest-large for now which is Intel-based until
+        # https://github.com/microsoft/playwright/issues/30705 is fixed.
+        os: [ubuntu-latest, macos-latest-large, windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v4
