feat(clock): expire cookies naively

--- a/packages/protocol/src/protocol.yml
+++ b/packages/protocol/src/protocol.yml
@@ -1222,6 +1222,7 @@ BrowserContext:
       parameters:
         timeNumber: number?
         timeString: string?
+        expireCookies: boolean?
 
     clockPauseAt:
       parameters:
