chore: address deprecated Vite warnings

--- a/packages/html-reporter/tsconfig.node.json
+++ b/packages/html-reporter/tsconfig.node.json
@@ -4,5 +4,5 @@
     "module": "esnext",
     "moduleResolution": "node"
   },
-  "include": ["vite.config.ts"]
+  "include": ["vite.config.ts", "bundle.ts"]
 }
