chore: allow evaluating Error objects
Previously, Error objects were replaced with strings.
Now, Error objects are reconstructed back from the serialized value.

--- a/packages/protocol/src/protocol.yml
+++ b/packages/protocol/src/protocol.yml
@@ -82,6 +82,13 @@ SerializedValue:
     u: string?
     # String representation of BigInt.
     bi: string?
+    # Serialized Error object.
+    e:
+      type: object?
+      properties:
+        m: string
+        n: string
+        s: string
     # Regular expression pattern and flags.
     r:
       type: object?
