--- a/packages/protocol/src/protocol.yml
+++ b/packages/protocol/src/protocol.yml
@@ -445,16 +445,11 @@ ContextOptions:
       items:
         type: object
         properties:
-          url: string
-          certs:
-            type: array
-            items:
-              type: object
-              properties:
-                cert: binary?
-                key: binary?
-                passphrase: string?
-                pfx: binary?
+          origin: string
+          cert: binary?
+          key: binary?
+          passphrase: string?
+          pfx: binary?
     javaScriptEnabled: boolean?
     bypassCSP: boolean?
     userAgent: string?
@@ -700,16 +695,11 @@ Playwright:
           items:
             type: object
             properties:
-              url: string
-              certs:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    cert: binary?
-                    key: binary?
-                    passphrase: string?
-                    pfx: binary?
+              origin: string
+              cert: binary?
+              key: binary?
+              passphrase: string?
+              pfx: binary?
         httpCredentials:
           type: object?
           properties:
